# tg_reader

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
adr/: 0001-record-architecture-decisions.md  0002-local-message-cache-in-sqlite.md  0003-message-entities-field.md  0004-ship-agent-skill-in-repo.md  0005-tombstone-deleted-messages.md  0006-remove-message-cache.md  0007-forum-topic-reply-header.md  0008-classify-local-file-errors-in-download.md  0009-cross-chat-reply-header.md  0010-enforce-max-size-during-transfer.md  0011-builtin-mime-table-for-generated-extensions.md  0012-accept-cache-resolution-of-non-dialog-peers.md  0013-pin-photo-downloads-to-still-image.md  README.md
docs/: PROJECT.md
skills/tg-reader/: SKILL.md
skills/tg-reader/agents/: openai.yaml
src/tg_reader/: __init__.py  auth.py  cache.py  cli.py  config.py  download.py  errors.py  media.py  read.py  session.py  throttle.py
tests/: test_auth.py  test_cache.py  test_cli.py  test_config.py  test_download.py  test_media.py  test_read.py  test_smoke.py  test_telethon_example.py  test_throttle.py
