[project]
name = "tg-reader"
version = "0.2.0"
description = "CLI utility for reading messages from your own Telegram account, designed for AI agents"
requires-python = ">=3.14"
dependencies = [
    "filelock>=3.29.5",
    "platformdirs>=4.10.0",
    "telethon>=1.44.0",
]

[project.scripts]
tg-reader = "tg_reader.cli:main"

[build-system]
requires = ["uv_build>=0.11,<2"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
