[project]
name = "tg-reader"
version = "0.4.4"
description = "CLI utility for reading messages from your own Telegram account, designed for AI agents"
requires-python = ">=3.11"
dependencies = [
    "filelock>=3.29.5",
    "platformdirs>=4.10.0",
    # <2: resolve_chat relies on Telethon 1.x session internals
    # (client.session.get_input_entity); v2 removes that interface.
    "telethon>=1.44.0,<2",
]

[project.scripts]
tg-reader = "tg_reader.cli:main"

[build-system]
requires = ["uv_build>=0.11,<2"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff.lint]
# Default rules plus BLE (no blind 'except Exception'); the CLI boundary
# in cli.py carries the one deliberate noqa.
extend-select = ["BLE"]
